--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -122,7 +122,7 @@ p {
 }
 /* Login and Registration Pages*/
 /* Style section for the text boxes where the user provides the input*/	
-input[type=text], input[type=password], input[type=number], input[type=date] {
+input[type=text], input[type=password], input[type=number], input[type=date], input[type=tel] {
   width: 50%;
   padding: 12px 20px;
   margin: 8px 0;
