--- a/styles.css
+++ b/styles.css
@@ -240,3 +240,104 @@ h3 {
 .container input:checked ~ .checkmark:after {
   display: block;
 }
+
+#modal {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  width: 100vw;
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.3));
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  z-index: 999;
+}
+
+#modal .form-box {
+  width: 380px;
+  height: 480px;
+  position: relative;
+  margin: 6% auto;
+  background: rgb(226, 226, 226);
+  padding: 5px;
+  overflow: hidden;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  border-radius: 3px;
+}
+
+#modal .button-box {
+  width: 220px;
+  margin: 35px auto;
+  position: relative;
+  box-shadow: 0 0 20px 9px var(--quaternary-color);
+  border-radius: 30px;
+}
+
+#modal .toggle-btn {
+  padding: 10px 30px;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  outline: none;
+  position: relative;
+}
+
+#modal #btn {
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 110px;
+  height: 100%;
+  background: linear-gradient(to right, var(--primary-color),var(--quaternary-color));
+  border-radius: 50px;
+  transition: .5s;
+}
+
+#modal .input-group {
+  top: 180px;
+  position: absolute;
+  width: 280px;
+  transition: .5s;
+}
+
+#modal .input-field{
+  width: 100%;
+  padding: 10px 0;
+  margin: 5px 0;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
+  background: transparent;
+}
+
+#modal .submit-btn {
+  width: 85%;
+  padding: 10px 30px;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  background: linear-gradient(to right,var(--primary-color),var(--quaternary-color));
+  border: 0;
+  outline: none;
+  border-radius: 30px;
+}
+
+#modal .check-box {
+  margin: 30px 3px 30px 0;
+}
+
+#modal label {
+  color: #777;
+  font-size: 12px;
+  bottom: 68px;
+}
+
+#login {
+  left: 50px;
+}
+
+#register {
+  left: 450px;
+}
